turtleart.lessons.turtleart.Main.Polygon20.scala.code
override def run() {
for(i<-0 to 19){
	avance(3à);
	droite(18);
}
}
